--- a/arizona-esthetics.html
+++ b/arizona-esthetics.html
@@ -540,6 +540,43 @@
   padding-top: 0.75rem;
   border-top: 1px solid #f0f0f0;
 }
+/* Photo Modal */
+.photo-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.9);
+  z-index: 2000;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+}
+.photo-modal.active { display: flex; }
+.photo-modal img {
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
+  border-radius: 8px;
+}
+.photo-modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  color: white;
+  font-size: 2.5rem;
+  cursor: pointer;
+  line-height: 1;
+}
+.behind-scenes-card img {
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+.behind-scenes-card img:hover {
+  opacity: 0.9;
+}
 </style>
 </head>
 <body>
@@ -560,7 +597,7 @@
         <p class="content-body">Co-founding a trade school meant co-building it—literally. With young kids at home and a vision to create opportunity for others, we rolled up our sleeves and built Arizona Esthetics Institute from the ground up.</p>
         <div class="behind-scenes-grid">
           <div class="behind-scenes-card">
-            <img src="images/AEITexture.jpg" alt="Building the facility">
+            <img src="images/AEITexture.jpg" alt="Building the facility" onclick="openPhotoModal(this.src, this.alt)">
             <div class="behind-scenes-info">
               <h4>Building It—Literally</h4>
               <p>That's me doing the facility texture work. Co-founder meant co-builder. We did the buildout ourselves to make our budget work.</p>
@@ -568,7 +605,7 @@
             </div>
           </div>
           <div class="behind-scenes-card">
-            <img src="images/ChristieOfficeAEI.jpg" alt="Office at AEI">
+            <img src="images/ChristieOfficeAEI.jpg" alt="Office at AEI" onclick="openPhotoModal(this.src, this.alt)">
             <div class="behind-scenes-info">
               <h4>Running Operations</h4>
               <p>My office at Arizona Esthetics Institute. That whiteboard tracked student progress, enrollment targets, and daily operations for a state-licensed vocational program.</p>
@@ -921,6 +958,25 @@ document.addEventListener('click', function(e) {
   if (!e.target.closest('.casestudy-dropdown')) {
     document.getElementById('casestudyDropdown').classList.remove('active');
   }
+});
+</script>
+<div class="photo-modal" id="photoModal" onclick="closePhotoModal()">
+  <span class="photo-modal-close">&times;</span>
+  <img id="photoModalImg" src="" alt="Full size photo">
+</div>
+<script>
+function openPhotoModal(src, alt) {
+  document.getElementById('photoModalImg').src = src;
+  document.getElementById('photoModalImg').alt = alt;
+  document.getElementById('photoModal').classList.add('active');
+  document.body.style.overflow = 'hidden';
+}
+function closePhotoModal() {
+  document.getElementById('photoModal').classList.remove('active');
+  document.body.style.overflow = '';
+}
+document.addEventListener('keydown', function(e) {
+  if (e.key === 'Escape') closePhotoModal();
 });
 </script>
 </body>
