--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -513,6 +513,43 @@
   padding-top: 0.75rem;
   border-top: 1px solid #f0f0f0;
 }
+/* Photo Modal */
+.photo-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.9);
+  z-index: 2000;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+}
+.photo-modal.active { display: flex; }
+.photo-modal img {
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
+  border-radius: 8px;
+}
+.photo-modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  color: white;
+  font-size: 2.5rem;
+  cursor: pointer;
+  line-height: 1;
+}
+.behind-scenes-card img {
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+.behind-scenes-card img:hover {
+  opacity: 0.9;
+}
 </style>
 </head>
 <body>
@@ -648,7 +685,7 @@
           <p class="content-body">My entrepreneurial foundation started here—building a business while raising a young family. Four kids under five at a grand opening? That was just Tuesday for us.</p>
           <div class="behind-scenes-grid">
             <div class="behind-scenes-card single">
-              <img src="images/GrandOpeningFebruary1999.jpg" alt="Grand Opening February 1999">
+              <img src="images/GrandOpeningFebruary1999.jpg" alt="Grand Opening February 1999" onclick="openPhotoModal(this.src, this.alt)">
               <div class="behind-scenes-info">
                 <h4>Where It All Started</h4>
                 <p>Grand opening ribbon cutting, February 1999. That's my husband holding our 4th child, born just weeks earlier. Entrepreneurship doesn't wait for convenient timing.</p>
@@ -1034,6 +1071,25 @@ document.addEventListener('DOMContentLoaded', function() {
 <script>
 function toggleCasestudyDropdown() { document.getElementById('casestudyDropdown').classList.toggle('active'); }
 document.addEventListener('click', function(e) { if (!e.target.closest('.casestudy-dropdown')) { document.getElementById('casestudyDropdown').classList.remove('active'); } });
+</script>
+<div class="photo-modal" id="photoModal" onclick="closePhotoModal()">
+  <span class="photo-modal-close">&times;</span>
+  <img id="photoModalImg" src="" alt="Full size photo">
+</div>
+<script>
+function openPhotoModal(src, alt) {
+  document.getElementById('photoModalImg').src = src;
+  document.getElementById('photoModalImg').alt = alt;
+  document.getElementById('photoModal').classList.add('active');
+  document.body.style.overflow = 'hidden';
+}
+function closePhotoModal() {
+  document.getElementById('photoModal').classList.remove('active');
+  document.body.style.overflow = '';
+}
+document.addEventListener('keydown', function(e) {
+  if (e.key === 'Escape') closePhotoModal();
+});
 </script>
 </body>
 </html>
