✅ INDEX.HTML FULLY COMPLETE & VERIFIED You're ready to:  Test in browser (desktop + mobile) — confirm everything looks right Commit to GitHub when satisfied Start new chat with the handoff document I provided
✅ INDEX.HTML FULLY COMPLETE & VERIFIED
You're ready to:

Test in browser (desktop + mobile) — confirm everything looks right
Commit to GitHub when satisfied
Start new chat with the handoff document I provided

--- a/index.html
+++ b/index.html
@@ -1092,10 +1092,18 @@
     }
 
     /* ==================== TESTIMONIALS - COLORFUL ==================== */
-    .testimonials-grid {
+   .testimonials-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 1.5rem;
+      justify-content: center;
+    }
+
+    .testimonials-hidden.visible {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 1.5rem;
+      justify-content: center;
     }
 
     .testimonial-card {
